<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <TextView
        android:id="@+id/text_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="404dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:background="@color/headingBackground"
        android:gravity="center"
        android:text="@string/tvMyProfile"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="404dp"
        android:layout_height="35dp"
        android:layout_marginTop="176dp"
        android:background="@color/headingBackground"
        android:gravity="center"
        android:text="@string/HeadingPosts"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="404dp"
        android:layout_height="35dp"
        android:layout_marginTop="152dp"
        android:background="@color/headingBackground"
        android:gravity="center"
        android:text="@string/HeadingDonation"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_marginTop="84dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="88dp"
        android:text="@string/Donor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="8dp"
        android:text="@string/mobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="4dp"
        android:text="@string/Address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="142dp"
        android:layout_height="141dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="272dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medal" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/don"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="230dp"
        android:layout_height="110dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="288dp"
        android:gravity="center"
        android:text="@string/tvDonation"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="159dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/reviewchildren" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/ic_baseline_chat_24" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="64dp"
        android:text="25"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/ic_baseline_thumb_up_24" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:text="36"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="20dp"
        android:layout_height="22dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="64dp"
        android:text="10"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="116dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btnBackground"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:text="@string/btnEdit"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <Button
        android:id="@+id/btnEdit3"
        android:layout_width="172dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/btnBackground"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:text="@string/btnEditProfile"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnDelete2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/btnBackground"
        android:drawableLeft="@drawable/ic_baseline_delete_24"
        android:text="@string/btnDelete"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/btnEdit"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/btnDelete2"
        android:layout_width="179dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btnBackground"
        android:drawableLeft="@drawable/ic_baseline_delete_24"
        android:text="@string/btnDeleteProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnEdit3"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />


</androidx.constraintlayout.widget.ConstraintLayout>