<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page2SelectAccount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSelectionTopic"
            android:layout_width="297dp"
            android:layout_height="51dp"
            android:layout_marginTop="216dp"
            android:ellipsize="middle"
            android:fontFamily="serif"
            android:gravity="center_horizontal|center_vertical"
            android:shadowColor="@color/LoginHintColor"
            android:text="@string/SelectionText"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textColorHighlight="@color/btnBackground"
            android:textDirection="ltr"
            android:textSize="24sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/btnNeeder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnDonor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="@drawable/gradient_normal"
            android:text="@string/btnDonor"
            app:layout_constraintEnd_toStartOf="@+id/btnNeeder"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSelectionTopic" />

        <Button
            android:id="@+id/btnNeeder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_normal"
            android:text="@string/btnNeeder"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnDonor"
            app:layout_constraintEnd_toStartOf="@+id/btnDriver"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnDonor" />

        <Button
            android:id="@+id/btnDriver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_normal"
            android:text="@string/btnDriver"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnNeeder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnNeeder" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@drawable/gradient_normal"
            android:text="Skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNeeder" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>